rename links services > in explainer, fix overflow-x hidden html

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -25,7 +25,11 @@ p {
   padding: 0;
   list-style: none;
 }
-
+html {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
 body {
   color: #000;
   font-family: "Open Sans", sans-serif;
