--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1516,6 +1516,8 @@
   .btn-respon__fixed.btn-form.active::after {
     top: 14px;
     left: 14px;
+    width: 24px;
+    height: 24px;
   }
   .btn-respon__fixed.btn-form::after {
     width: 24px;
