--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1547,6 +1547,7 @@ h1.contact-title {
   height: 180px;
 }
 .explainer__watisit-item--title {
+  color: #000;
   font-size: 24px;
   font-weight: 700;
 }
